--- a/config/_default/languages.fr.toml
+++ b/config/_default/languages.fr.toml
@@ -1,7 +1,7 @@
 languageCode = "fr"
 languageName = "Français"
 weight = 3
-title = "My blog"
+title = "Mon site Internet"
 
 [params]
   displayName = "FR"
