Will add initial english menus

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -10,10 +10,21 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
-#[[main]]
-#  name = "Blog"
-#  pageRef = "posts"
-#  weight = 10
+[[main]]
+  name = "Posts"
+  pageRef = "posts"
+  weight = 10
+
+[[main]]
+  name = "Portfolio"
+  pageRef = "samples"
+  weight = 20
+
+
+[[main]]
+  name = "About"
+  pageRef = "me"
+  weight = 30
 
 #[[main]]
 #  name = "Parent"
