--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   server:
-      image: klakegg/hugo:alpine
-      command: server -D --port=1314
+      image: hugomods/hugo:latest
+      command: hugo server --port 1314 --bind 0.0.0.0
       volumes:
         - ".:/src"
       ports:
